--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
       content="Web site created using create-react-app"
     />
     <title>Shopping Cart</title>
+    <link rel='stylesheet' href="../src/styles/reset.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
