added font awesome script

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <script src='https://kit.fontawesome.com/affeb91e0c.js'></script>
     <title>Shopping Cart</title>
     <!-- Start Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
